cmake_minimum_required(VERSION 3.0.0)
project(LeetCodeSolution VERSION 0.1.0)

include(CTest)
enable_testing()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

include_directories(./ ./SolutionSrc)
add_subdirectory(SolutionSrc)
aux_source_directory(./SolutionSrc SOLUTIONSRC)

add_executable(TEST456 test456.cpp ${SOLUTIONSRC})
add_executable(TEST442 test442.cpp ${SOLUTIONSRC})
add_executable(TEST650 test650.cpp ${SOLUTIONSRC})
add_executable(TEST542 test542.cpp ${SOLUTIONSRC})
add_executable(TEST21 test21.cpp ${SOLUTIONSRC})
add_executable(TEST3 test3.cpp ${SOLUTIONSRC})
add_executable(TEST15 test15.cpp ${SOLUTIONSRC})
add_executable(TEST415 test415.cpp ${SOLUTIONSRC})
add_executable(TEST721 test721.cpp ${SOLUTIONSRC})
add_executable(TEST637 test637.cpp ${SOLUTIONSRC})
add_executable(TEST94 test94.cpp ${SOLUTIONSRC})
add_executable(TEST144 test144.cpp ${SOLUTIONSRC})
add_executable(TEST226 test226.cpp ${SOLUTIONSRC})
add_executable(TEST102 test102.cpp ${SOLUTIONSRC})
add_executable(TEST98 test98.cpp ${SOLUTIONSRC})
add_executable(TEST111 test111.cpp ${SOLUTIONSRC})
add_executable(TEST297 test297.cpp ${SOLUTIONSRC})
add_executable(TEST114 test114.cpp ${SOLUTIONSRC})
add_executable(TEST4 test4.cpp ${SOLUTIONSRC})
add_executable(TESTARRAY testArray.cpp ${SOLUTIONSRC})
add_executable(TESTSORT testSort.cpp ${SOLUTIONSRC})

# enable_testing()
# add_test(myTEST266 TEST415 1 2)

