aux_source_directory(../SolutionSrc SOLUTIONSRC)
include_directories(./ ../SolutionSrc ../include)

add_executable(test456 test456.cpp ${SOLUTIONSRC})
add_executable(test442 test442.cpp ${SOLUTIONSRC})
add_executable(test650 test650.cpp ${SOLUTIONSRC})
add_executable(test542 test542.cpp ${SOLUTIONSRC})
add_executable(test21 test21.cpp ${SOLUTIONSRC})
add_executable(test3 test3.cpp ${SOLUTIONSRC})
add_executable(test15 test15.cpp ${SOLUTIONSRC})
add_executable(test415 test415.cpp ${SOLUTIONSRC})
add_executable(test721 test721.cpp ${SOLUTIONSRC})
add_executable(test637 test637.cpp ${SOLUTIONSRC})
add_executable(test94 test94.cpp ${SOLUTIONSRC})
add_executable(test144 test144.cpp ${SOLUTIONSRC})
add_executable(test226 test226.cpp ${SOLUTIONSRC})
add_executable(test102 test102.cpp ${SOLUTIONSRC})
add_executable(test98 test98.cpp ${SOLUTIONSRC})
add_executable(test111 test111.cpp ${SOLUTIONSRC})
add_executable(test297 test297.cpp ${SOLUTIONSRC})
add_executable(test114 test114.cpp ${SOLUTIONSRC})
add_executable(test4 test4.cpp ${SOLUTIONSRC})
add_executable(testArray testArray.cpp ${SOLUTIONSRC})
add_executable(testSort testSort.cpp ${SOLUTIONSRC})
add_executable(testLink testLink.cpp ${SOLUTIONSRC})
add_executable(testQueue testQueue.cpp ${SOLUTIONSRC})
add_executable(testString testString.cpp ${SOLUTIONSRC})
add_executable(testTrace testTrace.cpp ${SOLUTIONSRC})
add_executable(testGreedy testGreedy.cpp ${SOLUTIONSRC})
add_executable(testBfs testBfs.cpp ${SOLUTIONSRC})
add_executable(testSolution testSolution.cpp ${SOLUTIONSRC})
add_executable(testBit testBit.cpp ${SOLUTIONSRC})
add_executable(testDp testDp.cpp ${SOLUTIONSRC})
add_executable(testTree testTree.cpp ${SOLUTIONSRC})
add_executable(testLinkList testLinkList.cpp ${SOLUTIONSRC})
add_executable(testPthread testPthread.cpp)

link_libraries(boost_system)
add_executable(testMutex testMutex.cpp)
